<resources>
    <string name="app_name">pavel-bodrov-shop</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="empty_cart_text">В корзине ничего нет</string>
    <string name="firstname_hint">Имя</string>
    <string name="lastname_hint">Фамилия</string>
    <string name="middlename_hint">Отчество</string>
    <string name="payment_type">Способ оплаты:</string>
    <string name="phone_hint">(+7 или 8) 999 999 99 99</string>
    <string name="radio_cash_header">Наличными</string>
    <string name="radio_card_header">Картой</string>
    <string name="pay_button_text">Оплатить</string>
    <string name="catalog_header">"МотоМаркет"</string>
    <string name="catalog_to_cart_button">В корзину</string>
    <string name="product_info_header">Информация о продукте</string>
    <string name="product_info_back_button">Назад</string>
    <string name="product_to_cart_button">Корзина</string>
    <string name="cart_header">Корзина</string>
    <string name="cart_back_button_desc">Назад</string>
    <string name="cart_to_checkout_button">Оформить заказ</string>
    <string name="checkout_back_button_desc">Назад</string>
    <string name="cart_product_name_header">Название</string>
    <string name="cart_product_discount_header">Скидка</string>
    <string name="cart_product_price_header">Цена</string>
    <string name="add_new_product_button">Добавить продукт</string>
    <string name="catalog_lv_header">Последние просмотренные товары</string>
    <string name="buy_button_text">Добавить в корзину</string>
    <string name="footer_catalog_button_text">Каталог</string>
    <string name="footer_cart_button_text">Корзина</string>
    <string name="footer_contacts_button_text">Контакты</string>
    <string name="contacts_header">МотоМаркет</string>
    <string name="contacts_addr">г. Челябинск, ул. Братьев Кашириных, д. 131А</string>
    <string name="contacts_phone">+7-(932)-891-33-20</string>
    <string name="cart_total_text">Сумма заказа:</string>
    <string name="cart_checkout_button">Оформить заказ</string>
    <string name="checkout_pay_button">Оплатить</string>
</resources>
