<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/catalogHeader"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/catalogFooter"
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/contactsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/contacts_header"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalogHeader" />

    <ImageView
        android:id="@+id/contactsAddrIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactsHeader"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/contactsAddrTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/contacts_addr"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/contactsAddrIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactsAddrIv"
        app:layout_constraintTop_toTopOf="@+id/contactsAddrIv" />

    <ImageView
        android:id="@+id/contactsPhoneIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactsAddrIv"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/contactsPhoneTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/contacts_phone"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/contactsPhoneIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactsPhoneIv"
        app:layout_constraintTop_toTopOf="@+id/contactsPhoneIv" />

</androidx.constraintlayout.widget.ConstraintLayout>