<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <ImageButton
        android:id="@+id/footerCatalogButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/footer_catalog_button_text"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footerCatalogButton"
        app:layout_constraintTop_toBottomOf="@+id/footerCatalogButton" />

    <ImageButton
        android:id="@+id/footerCartButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:padding="6dp"
        app:layout_constraintEnd_toStartOf="@+id/footerContactsButton"
        app:layout_constraintStart_toEndOf="@+id/footerCatalogButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/footer_cart_button_text"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footerCartButton"
        app:layout_constraintStart_toStartOf="@+id/footerCartButton"
        app:layout_constraintTop_toBottomOf="@+id/footerCartButton" />

    <ImageButton
        android:id="@+id/footerContactsButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/footer_contacts_button_text"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/footerContactsButton"
        app:layout_constraintTop_toBottomOf="@+id/footerContactsButton" />
</androidx.constraintlayout.widget.ConstraintLayout>